# cis194

./: .codeclimate.yml  Cis194.cabal  LICENSE
src/: Calc.hs  Golf.hs  Hw1.hs  Hw4.hs  Log.hs  LogAnalysis.hs  Parser.hs
test/: Hw1Spec.hs  Hw2Spec.hs  Hw3Spec.hs  Hw4Spec.hs  Hw5Spec.hs
