name:                Cis194
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/wfleming/Cis194#readme
author:              Will Fleming
maintainer:          will@flemi.ng
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hw1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

Test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , Cis194
  other-modules:      Golf
                     , Hw1
                     , Log
                     , LogAnalysis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wfleming/Cis194
